--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.2",
+    "@phuocng/react-pdf-viewer": "^1.7.0",
+    "@react-pdf-viewer/toolbar": "^2.3.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -17,8 +19,10 @@
     "bootstrap-sass": "^3.3.7",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
+    "pdfjs-dist": "^2.5.207",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-pdf": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
@@ -31,6 +35,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://localhost:3000",
   "eslintConfig": {
     "extends": [
       "react-app",
