Change viewer version (no toolbar)

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.2",
     "@phuocng/react-pdf-viewer": "^1.7.0",
+    "@react-pdf-viewer/core": "^2.3.2",
     "@react-pdf-viewer/toolbar": "^2.3.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
@@ -19,7 +20,7 @@
     "bootstrap-sass": "^3.3.7",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
-    "pdfjs-dist": "^2.5.207",
+    "pdfjs-dist": "^2.6.347",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
