--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "react-scroll": "^1.8.9"
   }
 }
