--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.13.0",
-    "react-scroll": "^1.8.9"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-router-dom": "^6.13.0"
   }
 }
