--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resume",
   "version": "2.0",
-  "homepage": "https://nataliaCodes.github.io/resume",
+  "homepage": "https://nataliaCodes.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
